@@ -5,6 +5,9 @@
 - Added configuration variable IcmpPingSize
 	INSERT INTO config (var_name,var_value,is_visible,need_server_restart)
 		VALUES ('IcmpPingSize','46',1,1);
+- Added configuration variable SMSDrvConfig
+	INSERT INTO config (var_name,var_value,is_visible,need_server_restart)
+		VALUES ('SMSDrvConfig','',1,1);
 - Added table for storing syslog messages
 	CREATE TABLE syslog
 	(
