@@ -75,6 +75,8 @@ INSERT INTO config (var_name,var_value,is_visible,need_server_restart)
 INSERT INTO config (var_name,var_value,is_visible,need_server_restart)
 	VALUES ('SMSDriver','<none>',1,1);
 INSERT INTO config (var_name,var_value,is_visible,need_server_restart)
+	VALUES ('SMSDrvConfig','',1,1);
+INSERT INTO config (var_name,var_value,is_visible,need_server_restart)
 	VALUES ('SMTPServer','localhost',1,0);
 INSERT INTO config (var_name,var_value,is_visible,need_server_restart)
 	VALUES ('SMTPFromAddr','netxms@localhost',1,0);
