@@ -6,3 +6,6 @@ LIBMYSQL.DLL
 NTWDBLIB.DLL
 LIBPQ.DLL
 LIBEAY32.DLL
+SSLEAY32.DLL
+LIBINTL-2.DLL
+LIBICONV-2.DLL
